# learning-post-estimation

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yaml  hello.py  project_sitting_pose.ipynb  pyproject.toml  yolo_demo.ipynb
learning_post_estimation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
